// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldCheckbox 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  background: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: 3px;
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c4 input {
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c4 input:checked + .c5 {
  background-color: #6C43E0;
  border-color: #6C43E0;
}

.c4 input:not(:checked) + .c5 {
  color: #FFFFFF;
}

.c4 input:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input:disabled + .c5 {
  background: transparent;
  border-color: #DEE1E5;
  color: #939BA5;
}

.c4 input:disabled:not(:checked) + .c5 {
  color: transparent;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        checked={false}
        id="FieldCheckboxID"
        name="thumbsUp"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;

exports[`A FieldCheckbox with checked value 1`] = `
.c6 {
  position: relative;
  width: 100%;
  height: 100%;
  background: currentColor;
  border: solid 1px #DEE1E5;
  border-radius: 0.125rem;
  color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  margin: 3px;
  display: inline-block;
  height: 1rem;
  position: relative;
  width: 1rem;
  vertical-align: middle;
}

.c4 input {
  height: 100%;
  opacity: 0;
  position: absolute;
  width: 100%;
  z-index: 1;
}

.c4 input:checked + .c5 {
  background-color: #6C43E0;
  border-color: #6C43E0;
}

.c4 input:not(:checked) + .c5 {
  color: #FFFFFF;
}

.c4 input:focus + .c5 {
  border-color: #9785F2;
  box-shadow: 0 0 0 2px #E8E5FF;
  outline: none;
}

.c4 input:disabled + .c5 {
  background: transparent;
  border-color: #DEE1E5;
  color: #939BA5;
}

.c4 input:disabled:not(:checked) + .c5 {
  color: transparent;
}

.c2 {
  color: #343C42;
  font-size: 0.75rem;
  font-weight: 600;
  display: inline-block;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: grid;
  grid-template-areas: 'input label' '. messages';
  grid-template-columns: repeat(3,max-content);
}

.c0 .c3 {
  grid-area: input;
}

.c0 .c1 {
  font-size: 0.875rem;
  font-weight: normal;
  grid-area: label;
  padding-left: 0.5rem;
}

.c0 .c7 {
  grid-area: messages;
  padding-left: 0.75rem;
}

<label
  className="c0 "
>
  <span
    className="c1 c2"
    color="palette.charcoal700"
    fontSize="xsmall"
    fontWeight="semiBold"
  >
    👍
  </span>
  <div
    className="c3 "
  >
    <div
      className="c4 "
    >
      <input
        checked={true}
        id="FieldCheckboxID"
        name="thumbsUp"
        onChange={[Function]}
        onClick={[Function]}
        type="checkbox"
      />
      <div
        className="c5 c6"
      >
        <svg
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M4 8L7 11L12 4"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="2"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c7 "
  />
</label>
`;
